# iOpenPod

./: README.md  pyproject.toml  settings.py
.github/workflows/: flatpak.yml  release.yml
.interface-design/: system.md
ArtworkDB_Writer/: art_extractor.py  artwork_writer.py
GUI/: app.py  auto_updater.py  styles.py
GUI/widgets/: MBListView.py  playlistBrowser.py  podcastBrowser.py  selectiveSyncBrowser.py  syncReview.py
SQLiteDB_Writer/: library_writer.py
SyncEngine/: __init__.py  _db_io.py  audio_fingerprint.py  dependency_manager.py  fingerprint_diff_engine.py  pc_library.py  sync_executor.py  transcoder.py
docs/: SYNC.md  index.html
flatpak/: io.github.therealsavi.iOpenPod.metainfo.xml  io.github.therealsavi.iOpenPod.yml
iTunesDB_Parser/: ipod_library.py
iTunesDB_Shared/: field_base.py
iTunesDB_Writer/: mhbd_writer.py  mhit_writer.py  mhlt_writer.py  mhyp_writer.py
ipod_device/: scanner.py
